<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackMe Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="button_start_recording">Start recording</string>
    <string name="button_stop_recording">Stop recording</string>
    <string name="button_save_data">Save data</string>
    <string name="text_sensor_chooser">Choose sensors</string>
    <string name="text_output_chooser">Choose output destination</string>
    <string name="checkbox_folder_output">Folder</string>
    <string name="edittext_folder_name_hint">Folder name</string>
    <string name="edittext_folder_name_default">TrackMe-Sensors</string>
    <string name="checkbox_network_output">TCP server</string>
    <string name="edittext_network_address_hint">IP</string>
    <string name="edittext_network_port_hint">port</string>
    <string name="radio_native_accel_gyro">Native accel. + gyro. + mag.</string>
    <string name="radio_accel_gyro">Android accel. + gyro. + mag.</string>
    <string name="radio_linear_acceleration">Linear acceleration</string>

</resources>